Exercising positioning with margin, different fonts, sizes and using divs as hooks

--- a/HTML_projects/01/index.html
+++ b/HTML_projects/01/index.html
@@ -7,11 +7,41 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
- <h1>Hello Fellow Football lovers!</h1>
+ <h1>Hello Fellow Football <span class="arsenal-lovers"> (and Arsenal)</span> lovers!</h1>
  <p1><strong>This is a page dedicated to the wonderul sport that fooball is!</strong></p1>
 
- <img src="../01/images/arsenal.jpeg" alt="Arsenal Football club">
+ <img id="beginning" src="../01/images/arsenal.jpeg" alt="Arsenal Football club">
 
-    
+ <p class="first-para">The origins of football can be traced back centuries, with various forms of the sport emerging independently in different regions. Modern football, as we know it today, was codified in the 19th century in England, and it has since evolved into the most popular <a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html" target="_blank">sport</a> on the planet.</p>
+ <div class="second-para-div">
+    <p class="second-para">As a fan of Arsenal FC, I cannot help myself but turn this into a little history lecture regarding the club and its historical achievements:</p>
+    <p class="third-para">Arsenal FC, one of England's most storied football clubs, boasts a rich and illustrious history. Founded in 1886, initially as Woolwich Arsenal, the club moved to North London in 1913 and became Arsenal FC. Arsenal has been a top-tier team for decades, winning numerous league titles, FA Cups, and other honors. Their crowning achievement came during the 2003-2004 season when they went undefeated in the Premier League, earning them the nickname "The Invincibles." Known for their attractive style of play and a commitment to nurturing young talent through their academy, Arsenal's legacy in English football remains influential and enduring.Here are some of their achievements:</p>
+
+    <div class="achievement">
+        <h3 class="achievement-1">Trophies won</h3>
+        <h5 class="achievement-2">LEAGUE CHAMPIONS (13)</h5>
+        <h5 class="achievement-3">FA CUP WINNERS (14)</h5>
+        <h5 class="achievement-4">LEAGUE CUP WINNERS (2)</h5>
+        <h5 class="achievement-5">EUROPEAN FAIRS CUP WINNERS (1)</h5>
+        <h5 class="achievement-6">CHARITY/COMMUNITY SHIELD WINNERS (16)</h5>
+    </div>
+
+    <a href="https://www.arsenal.com/men/honours" target="_blank">Honours</a>
+
+   
+
+ </div>
+
+ <div class="ul-div"> <ul>
+    <ul>References:
+        <li><a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 1</a></li>
+        <li> <a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 2</a></li>
+
+    </ul>
+</ul>
+</div>
+
+<img id="end" src="../01/images/img.webp" alt="arsenal_team" width="310" height="200">
+
 </body>
 </html>
