Added a form with type-radio options and also played around with the margin for the References div

--- a/HTML_projects/01/index.html
+++ b/HTML_projects/01/index.html
@@ -32,13 +32,30 @@
 
  </div>
 
- <div class="ul-div"> <ul>
+
+<form class="form" action="https://www.gol.bg/" name="form">
+    Who is your favourite top 4 traditional English team?
+    <input type="radio" id="Arsenal" name="Arsenal">
+    <label for="Arsenal">Arsenal</label>
+    <input type="radio" id="Chelsea" name="Chelsea">
+    <label for="Chelsea">Chelsea</label>
+    <input type="radio" id="Manchester_United" name="Manchester_United">
+    <label for="Manchester_United">Manchester United</label>
+    <input type="radio" id="Liverpool" name="Liverpool">
+    <label for="Liverpool">Liverpool</label>
+
+    
+    
+</form>
+
+<div class="ul-div"> <ul>
     <ul>References:
         <li><a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 1</a></li>
         <li> <a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 2</a></li>
 
     </ul>
 </ul>
+
 </div>
 
 <img id="end" src="../01/images/img.webp" alt="arsenal_team" width="310" height="200">
