Added _target-blank function to the References links

--- a/HTML_projects/01/index.html
+++ b/HTML_projects/01/index.html
@@ -50,8 +50,8 @@
 
 <div class="ul-div"> <ul>
     <ul>References:
-        <li><a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 1</a></li>
-        <li> <a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html">Link 2</a></li>
+        <li><a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html" target="_blank">Link 1</a></li>
+        <li> <a href="https://www.worldatlas.com/articles/what-are-the-most-popular-sports-in-the-world.html" target="_blank">Link 2</a></li>
 
     </ul>
 </ul>
