Added a div containing the whole page and another one for the footer. In the css file added a display:flex function to the div containing the whole page while also setting the flex-direction to column

--- a/HTML_projects/01/index.html
+++ b/HTML_projects/01/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="container">
  <h1>Hello Fellow Football <span class="arsenal-lovers"> (and Arsenal)</span> lovers!</h1>
  <p1><strong>This is a page dedicated to the wonderul sport that fooball is!</strong></p1>
 
@@ -31,6 +32,8 @@
    
 
  </div>
+
+ <div class="footer">
 
 
 <form class="form" action="https://www.gol.bg/" name="form">
@@ -59,6 +62,8 @@
 </div>
 
 <img id="end" src="../01/images/img.webp" alt="arsenal_team" width="310" height="200">
+</div>  
+    </div>
 
 </body>
 </html>
