--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-ss
 
 <body>
-
+    <p class="normal-paragraph bold-text">Im just a paragraph with extra bold text!</p>
+    <p class="small-paragraph bold-text">Im just a smaller paragraph with extra bold text</p>
+    <div class="text">Im a div with thin text!</div>
+    <div class="text">Im a div with thin text and a child div
+        <div class="text child">I'm a smaller child div with extra bold text</div>
+    </div>
 </body>
 
 </html>
